added click events to the history element

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -53,6 +53,10 @@ li:first-letter {
     text-transform: capitalize;
 }
 
+.custom-li:hover {
+    cursor:pointer;
+}
+
 .green-uv {
     background-color: green;
     color: #fff;
